// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.commit.sponsor.sh given: [case1] a fresh tree, the supervisor pipes the requester in when: [t0] set --who @stdin then: binds the sponsor 1`] = `
"🐢 shell yeah, sponsor bound

🐚 git.commit.sponsor set
   ├─ name: Ada Lovelace
   ├─ email: ada@example.com
   └─ source: supplied
"
`;

exports[`git.commit.sponsor.sh given: [case1] a fresh tree, the supervisor pipes the requester in when: [t1] set --who "Name <email>" — the literal then: binds the same sponsor 1`] = `
"🐢 shell yeah, sponsor bound

🐚 git.commit.sponsor set
   ├─ name: Ada Lovelace
   ├─ email: ada@example.com
   └─ source: supplied
"
`;

exports[`git.commit.sponsor.sh given: [case3] get — a read carries no actor guard when: [t0] a sponsor is bound then: reports the bound human 1`] = `
"🐢 lets check the sponsor...

🐚 git.commit.sponsor
   ├─ name: Ada Lovelace
   ├─ email: ada@example.com
   └─ source: supplied
"
`;

exports[`git.commit.sponsor.sh given: [case3] get — a read carries no actor guard when: [t1] no bind, and git config names a clone — the clone's machine then: reports (none bound), says commits will refuse, and names the fix 1`] = `
"🐢 lets check the sponsor...

🐚 git.commit.sponsor
   ├─ sponsor: (none bound)
   ├─ git config: names a clone — the clone's machine
   └─ commits: will refuse

🥥 did you know?
   ├─ a human binds this tree's sponsor
   ├─ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
   └─ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case3] get — a read carries no actor guard when: [t1a] no bind, and git config names a human then: reports the git config default commits will name 1`] = `
"🐢 lets check the sponsor...

🐚 git.commit.sponsor
   ├─ sponsor: (none bound)
   └─ commits: use git config
      ├─ name: Kai Nalu
      └─ email: kai@example.com

🥥 did you know?
   ├─ a human can bind someone else to sponsor this tree
   └─ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
"
`;

exports[`git.commit.sponsor.sh given: [case4] the ACTOR guard — a clone cannot bind or clear when: [t0] set with no tty on any stream then: refuses, and names the channel as the cause 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: no terminal on this command

   only a human at a real terminal may bind or clear a sponsor, and
   this command has none. a clone's tool call has none, and neither
   does a claude \`!\` command, so the two cannot be told apart here.

   if you are a clone: this holds even for a real human's name. to
   name a human who did not act is a fabrication, and it reads as
   authorized. hand this to your human.

run it from your own terminal, in this tree:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case4] the ACTOR guard — a clone cannot bind or clear when: [t1] del with no tty then: refuses too, and leaves the sponsor bound 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor del
   └─ ✋ ConstraintError: no terminal on this command

   only a human at a real terminal may bind or clear a sponsor, and
   this command has none. a clone's tool call has none, and neither
   does a claude \`!\` command, so the two cannot be told apart here.

run it from your own terminal, in this tree:
  $ rhx git.commit.sponsor del
"
`;

exports[`git.commit.sponsor.sh given: [case5] the identity BACKSTOP refuses a party that cannot answer when: [t0] the value names a github app then: refuses as a robot 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: that identity cannot answer for a change

   you named:
     rhelease[bot] <249629030+rhelease[bot]@users.noreply.github.com>
   ...and it is a robot.

   a sponsor answers for the change in the real world. a robot cannot
   answer, so it cannot hold the slot.

name the human instead:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case5] the identity BACKSTOP refuses a party that cannot answer when: [t1] the value names this repo own clone identity then: refuses as a robot 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: that identity cannot answer for a change

   you named:
     seaturtle[bot] <seaturtle@ehmpath.com>
   ...and it is a robot.

   a sponsor answers for the change in the real world. a robot cannot
   answer, so it cannot hold the slot.

name the human instead:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case5] the identity BACKSTOP refuses a party that cannot answer when: [t2] the value names a placeholder then: refuses as a placeholder, on the SAME stem 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: that identity cannot answer for a change

   you named:
     Test User <test@example.com>
   ...and it is a placeholder.

   a sponsor answers for the change in the real world. a placeholder cannot
   answer, so it cannot hold the slot.

name the human instead:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case5] the identity BACKSTOP refuses a party that cannot answer when: [t3] the value names the clone's own github ACCOUNT then: refuses as a robot — the account is on the roster 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: that identity cannot answer for a change

   you named:
     Seaturtle of'Ehmpathy <259600029+ehm-seaturtle@users.noreply.github.com>
   ...and it is a robot.

   a sponsor answers for the change in the real world. a robot cannot
   answer, so it cannot hold the slot.

name the human instead:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case6] del clears the sponsor when: [t0] a sponsor was bound then: removes the state file 1`] = `
"🐢 groovy, sponsor cleared

🐚 git.commit.sponsor del
   └─ cleared
"
`;

exports[`git.commit.sponsor.sh given: [case6] del clears the sponsor when: [t1] no sponsor was bound then: succeeds as a no-op 1`] = `
"🐢 groovy, already clear

🐚 git.commit.sponsor del
   └─ sponsor: (none bound)
"
`;

exports[`git.commit.sponsor.sh given: [case6] del clears the sponsor when: [t2] a DIRECTORY sits at the state path then: 🔴 clears the damaged entry, never reports it clear 1`] = `
"🐢 groovy, sponsor cleared

🐚 git.commit.sponsor del
   └─ cleared
"
`;

exports[`git.commit.sponsor.sh given: [case6] del clears the sponsor when: [t3] a DIRECTORY sits at the state path, and \`set\` is run then: 🔴 refuses, never reports a bind that never landed 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ 💥 MalfunctionError: the sponsor state path is not a file

   a non-file object sits where the sponsor is kept:
     .meter/git.commit.sponsor.jsonc
   no sponsor was bound.

inspect it, clear it, then bind afresh:
  $ ls -la .meter/git.commit.sponsor.jsonc
  $ rm -r .meter/git.commit.sponsor.jsonc
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case7] malformed input when: [t0] --who is absent then: refuses and names the fix 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: --who is required

name the human:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case7] malformed input when: [t0b] --who is given with NO value — the bare flag then: 🔴 it refuses like [t0], never crashes on a bad shift 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: --who is required

name the human:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case7] malformed input when: [t1] the value is not a Name <email> then: refuses and shows what was given 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: that value is not a 'Name <email>'

   you gave:
     Ada Lovelace

name the human as a name plus an address:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case7] malformed input when: [t2] the piped value is empty then: refuses rather than binds an empty sponsor 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: --who resolved to an empty value

name the human:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case7] malformed input when: [t2b] the value holds a CONTROL character then: refuses an ESC-bearing value, and does NOT echo it back 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: that value holds a control character

a sponsor is one line, so name the human in plain text:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case7] malformed input when: [t3] no subcommand then: refuses on BOTH streams, and names the valid commands 1`] = `
"✋ ConstraintError: command must be 'set' or 'get' or 'del'
usage: printf 'Name <email>' | git.commit.sponsor set --who @stdin
       git.commit.sponsor set --who "Name <email>"
       git.commit.sponsor set --who @self
       git.commit.sponsor get
       git.commit.sponsor del
"
`;

exports[`git.commit.sponsor.sh given: [case7] malformed input when: [t4] an unknown option then: refuses on BOTH streams, and names the option 1`] = `
"✋ ConstraintError: unknown option: --nope
usage: printf 'Name <email>' | git.commit.sponsor set --who @stdin
       git.commit.sponsor set --who "Name <email>"
       git.commit.sponsor set --who @self
       git.commit.sponsor get
       git.commit.sponsor del
"
`;

exports[`git.commit.sponsor.sh given: [case8] --help when: [t0] --help is asked for then: leads with a .what, then the three value forms 1`] = `
"git.commit.sponsor — name the human who answers for this tree's commits

  on your own machine, commits need no bind: they name the human in
  this machine's git config. bind a sponsor to credit someone else,
  or on the clone's machine. a bind wins over git config.

usage: printf 'Name <email>' | git.commit.sponsor set --who @stdin
       git.commit.sponsor set --who "Name <email>"
       git.commit.sponsor set --who @self
       git.commit.sponsor get
       git.commit.sponsor del

commands:
  set    bind the sponsor for this worktree (human only, at a terminal)
  get    read the bound sponsor, or the git config default
  del    clear the bound sponsor (human only, at a terminal)

options (set):
  --who @stdin           read 'Name <email>' from the pipe
  --who "Name <email>"   name the human as a literal
  --who @self            this machine's git config user.name + user.email
                         (refuses where git config names a clone)

options:
  --help, -h             show this help
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t0] git config names a human then: binds the git config identity, source: self 1`] = `
"🐢 shell yeah, sponsor bound

🐚 git.commit.sponsor set
   ├─ name: Kai Nalu
   ├─ email: kai@example.com
   └─ source: self
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t1] git config user.email is unset then: refuses, names the absent half and its fix 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: --who @self found no git identity on this machine

   this machine's git config holds no complete identity:
     git config user.email is unset.

set it — then commits name you with no bind — or name yourself:
  $ git config --global user.email "you@example.com"
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t2] git config user.name is unset then: refuses and names user.name — never guesses a name 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: --who @self found no git identity on this machine

   this machine's git config holds no complete identity:
     git config user.name is unset.

set it — then commits name you with no bind — or name yourself:
  $ git config --global user.name "Your Name"
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t3] both halves are unset then: refuses and names both, with one fix line per half 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: --who @self found no git identity on this machine

   this machine's git config holds no complete identity:
     git config user.name is unset.
     git config user.email is unset.

set it — then commits name you with no bind — or name yourself:
  $ git config --global user.name "Your Name"
  $ git config --global user.email "you@example.com"
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t4] git config names a seaturtle bot — the clone's machine then: refuses: this is the clone's machine 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: --who @self read a clone's identity on this machine

   this machine's git config reads:
     seaturtle[bot] <seaturtle@ehmpath.com>
   ...so this is the clone's machine, and "self" here is the clone.

name yourself instead:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t5] git config names the clone's own github account then: refuses: the account is on the roster, so it is the clone's machine 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: --who @self read a clone's identity on this machine

   this machine's git config reads:
     Seaturtle of'Ehmpathy <259600029+ehm-seaturtle@users.noreply.github.com>
   ...so this is the clone's machine, and "self" here is the clone.

name yourself instead:
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t6] git config names a placeholder then: refuses as a placeholder, and says where the value came from 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: that identity cannot answer for a change

   this machine's git config reads:
     Test User <test@example.com>
   ...and it is a placeholder.

   a sponsor answers for the change in the real world. a placeholder cannot
   answer, so it cannot hold the slot.

fix it — then commits name you with no bind — or name yourself:
  $ git config --global user.name "Your Name"
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t7] git config email is not an address then: refuses, and the lead names git config — not "you gave" 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: --who @self read a malformed git identity

   this machine's git config reads:
     Kai Nalu <kai@localhost>

fix it — then commits name you with no bind — or name yourself:
  $ git config --global user.email "you@example.com"
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t7b] git config name holds a control character then: 🔴 the fix names user.name, never the email that is fine 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: --who @self read a malformed git identity

   this machine's git config reads:
     (holds a control character)

fix it — then commits name you with no bind — or name yourself:
  $ git config --global user.name "Your Name"
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t8] --who @me — the silent alias then: 🔴 the output never names @me 1`] = `
"🐢 shell yeah, sponsor bound

🐚 git.commit.sponsor set
   ├─ name: Kai Nalu
   ├─ email: kai@example.com
   └─ source: self
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t9] --who @me where git config cannot answer then: the refusal names @self, never @me 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor set
   └─ ✋ ConstraintError: --who @self found no git identity on this machine

   this machine's git config holds no complete identity:
     git config user.email is unset.

set it — then commits name you with no bind — or name yourself:
  $ git config --global user.email "you@example.com"
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case9] --who @self reads this machine's git config, and only that when: [t10] a bind written before the rename carries source: me then: get renders it as source: self 1`] = `
"🐢 lets check the sponsor...

🐚 git.commit.sponsor
   ├─ name: Kai Nalu
   ├─ email: kai@example.com
   └─ source: self
"
`;

exports[`git.commit.sponsor.sh given: [case10] the cwd is not a git repo when: [t0] any command is run outside a tree then: it names the cause, on BOTH streams 1`] = `
"✋ ConstraintError: not in a git repository
"
`;

exports[`git.commit.sponsor.sh given: [case11] the sponsor state file is present and unreadable when: [t0] get is run against it then: a corrupt file exits 1 — a malfunction, never an unbound tree 1`] = `
"🐢 bummer dude...

🐚 git.commit.sponsor get
   └─ 💥 MalfunctionError: sponsor state file corrupt

   the file that names this tree's sponsor cannot be read:
     .meter/git.commit.sponsor.jsonc

inspect it, or clear the bind and set it afresh:
  $ cat .meter/git.commit.sponsor.jsonc
  $ rhx git.commit.sponsor del
  $ printf 'Name <email>' | rhx git.commit.sponsor set --who @stdin
  $ rhx git.commit.sponsor set --who "Name <email>"
"
`;

exports[`git.commit.sponsor.sh given: [case14] the ACTOR guard, under a REAL pseudo-terminal when: [t0] a human at a terminal binds, with the escape DISABLED then: 🔴 the guard ACCEPTS a real tty — exit 0, no escape hatch 1`] = `
"🐢 shell yeah, sponsor bound

🐚 git.commit.sponsor set
   ├─ name: Ada Lovelace
   ├─ email: ada@example.com
   └─ source: supplied
"
`;
